2007-01-30        svu

	* SqlPlugin.props, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java: adding repeat query button to the result
	window, putting the query text into the table data model (RSW.Data
	class)
	* icons/repeatSameQuery.png, icons/closebox.png, icons/closebox.gif:
	getting rid of .gif icon, adding tiny icon for the repeat query button
	on the ResultSetWindow

2007-01-25        svu

	* sql/ResultSetWindowPopup.java, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java, sql/SqlServerType.java: using proper
	server-specific formatting for ResultSetWindow (including clipboard
	operations)
	* sql/ResultSetWindow.java: improving tooltips, providing query
	name as tab tooltip, server type as server name tooltip
	* sql/ResultSetWindowPopup.java, sql/ResultSetWindow.java: getting rid
	of redundant ResultSetWindow.TableModel class - the Data class can do
	it all

2007-01-24        svu

	* sql/ResultSetWindow.java, sql/SqlServerType.java: keeping actual
	objects in the result set window (for a moment - without proper
	formatting, TODO)

2007-01-23        svu

	* sql/SqlTextPublisher.java, sql/ResultSetWindow.java: using proper
	server name (not the currently selected one - it works incorrectly for
	VFS).
	* SqlPlugin.props, users-guide.xml: preparing 1.05

2007-01-22        svu

	* sql/serverTypes/Sybase.xml, sql/serverTypes/MSSQL.xml,
	sql/serverTypes/MSSQL.jTDS.xml, sql/serverTypes/ASA.xml,
	sql/serverTypes/Derby.xml, sql/serverTypes/mysql.xml: Specifying
	proper edit modes in the server types
	* sql/actions/SchemaAction.java: Using edit modes for the "column"
	pseudo-files, formatting these files as "SQL comments-only"
	* actions.xml: fixing broken getSelectedServerName call

2007-01-21        svu

	* sql/options/JdbcOptionPane.java: keeping the last file chooser
	directory in jEdit properties (depends on the latest CommonControls
	code)

2007-01-19        svu

	* SqlPlugin.props, sql/options/ServersOptionPane.java,