@@ -1,3 +1,8 @@
+2007-02-01        svu
+
+	* sql/SqlTextPublisher.java, sql/ResultSetWindow.java: requerying
+	result set actuall works now
+
 2007-01-30        svu
 
 	* SqlPlugin.props, sql/SqlTextPublisher.java,
